[장태준] sprint4 (#227)
* feat: 미션 3 요구사항 추가 커밋

* ci: pr 테스트 추가

* fix: 변경사항 놓친것들 추가

* feat: 미션 4 요구사항 커밋